fix for story visibility query when no user logged in, minor tweaks to visuals

--- a/client/stylesheets/style.css
+++ b/client/stylesheets/style.css
@@ -61,7 +61,7 @@ body {
     float: left; }
     .story .story-content h3 {
       margin: 0;
-      line-height: 1.4;
+      line-height: 1.8;
       font-size: 18px; }
       .story .story-content h3 a {
         display: inline-block;
